feat : Cards Board and timer
Initial develop of Board with cards and timer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         	</ul>
 
         	<span class="moves">3</span> Moves
-
+             <time>0s</time>
             <div class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
